--- a/app/pages/index/index.wxml
+++ b/app/pages/index/index.wxml
@@ -1,14 +1,12 @@
 <view>
     <view class="page-top">
-        <text class="username">恭喜你</text>
-        <text class="text-info">成功地搭建了一个微信小程序</text>
+        <text class="username">小以沫</text>
+        <text class="age-txt">{{ages}} <text style="font-size: 64rpx;background:none;font-weight:normal;color:#fff;"> </text></text>
         <view class="page-btn-wrap">
             <button class="page-btn" bindtap="gotoAlbum">进入相册</button>
         </view>
     </view>
     <view class="page-bottom">
-        <text class="qr-txt">分享二维码邀请好友结伴一起写小程序！</text>
-        <image src="../../images/qr.png" class="qr-img"></image>
-        <image src="../../images/logo.png" class="page-logo"></image>
+        <view class="my-footer__text">Copyright © 2008-2018 www.mcloudx.cn</view>
     </view>
 </view>
